# summer-school-radar

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA-LICENSE.txt  LICENSE  README.md  ai_extractions.json  candidates.json  feed.xml  index.html  pyproject.toml  review_queue.json  robots.txt  scan-manifest.json  semantic_chunks.json  sitemap.xml  sources.html  sources.json  translation-status.json
.github/workflows/: ai_scan.yml  scheduled_scan.yml  tests.yml
assets/css/: home.css  opportunities.css  sources.css
assets/js/: i18n-boot.js
config/: ai.yaml  profile.yaml  queries.yaml  site.yaml  sources.yaml
data/: latest_candidates.json  latest_scan_manifest.json  latest_sources.json  overrides.yml  review_queue.json  seen.json  seen.sqlite
docs/: DEVELOPMENT_LOG.md  TECHNICAL.md  TECHNICAL.zh-CN.md
opportunities/: 48th-cern-school-of-computing-58e058ec.html  about-the-summer-school-in-social-sciences-methods-bbb1330b.html  application-advanced-language-processing-winter-school-7237f9e9.html  applied-public-policy-evaluation-664d707b.html  cispa-summer-school-09a55e2d.html  cscs-usi-summer-school-2026-on-effective-high-performance-computing-an-d62f3c06.html  data-management-and-scientific-computing-dmsc-centre-summer-school-202-78075357.html  economics-of-climate-change-3a8a9f3c.html  egg-2026-summer-school-9c4c5f3e.html  ellis-summer-school-at-institute-tübingen-2b0c0db3.html  ellis-summer-school-at-unit-munich-aa9fdabc.html  ellis-summer-school-at-unit-saarbrücken-a1f49d69.html  explore-cispa-b9a899aa.html  gesis-spring-seminar-cutting-edge-methods-351a510c.html  get-to-know-the-bernstein-network-86a94282.html  global-south-essex-summer-school-in-social-science-data-analysis-4ce2e0fd.html  icos-summer-winter-school-january-2027-application-is-now-open-aa684ebc.html  ieee-ras-summer-school-in-germany-bridging-ai-and-robotics-40f851a3.html  ihe-delft-edition-0846de42-3284-11f1-a0a9-0050561f03f5-b9f3ed51.html  ihe-delft-edition-09caee26-3281-11f1-a0a9-0050561f03f5-0d01871b.html  ihe-delft-edition-0c1b6bf4-75ff-11f1-a7f4-0050561f03f5-e436369b.html  ihe-delft-edition-10180031-3f14-11f1-9a59-0050561f03f5-8c5a79d5.html  ihe-delft-edition-13763e13-4ded-11f1-b159-0050561f03f5-95e07349.html  ihe-delft-edition-1f6ddf05-4df0-11f1-b159-0050561f03f5-31c5a455.html  ihe-delft-edition-27615956-52b7-11f1-b159-0050561f03f5-5654c874.html  ihe-delft-edition-27fa04f3-3282-11f1-a0a9-0050561f03f5-8138ea53.html  ihe-delft-edition-2beca740-3283-11f1-a0a9-0050561f03f5-53099c25.html  ihe-delft-edition-2f82d05a-3284-11f1-a0a9-0050561f03f5-fd04483d.html  ihe-delft-edition-36c27682-3281-11f1-a0a9-0050561f03f5-bf728909.html  ihe-delft-edition-427f3f43-3f13-11f1-9a59-0050561f03f5-d3fe919a.html  ihe-delft-edition-565d378d-3283-11f1-a0a9-0050561f03f5-2e7aacb8.html  ihe-delft-edition-58aa4140-3f12-11f1-9a59-0050561f03f5-8621a2fc.html  ihe-delft-edition-5dffa121-3281-11f1-a0a9-0050561f03f5-fb444464.html  ihe-delft-edition-5e57a522-3284-11f1-a0a9-0050561f03f5-94e4f474.html  ihe-delft-edition-7415606a-115b-11f1-bb1b-0050561f03f5-31d9b11a.html  ihe-delft-edition-8578a6c2-3282-11f1-a0a9-0050561f03f5-bce745df.html  ihe-delft-edition-86942c24-0694-11f1-ad8c-0050561f03f5-f9624340.html  ihe-delft-edition-a4942c80-3281-11f1-a0a9-0050561f03f5-d764f76a.html  ihe-delft-edition-afc693d1-3282-11f1-a0a9-0050561f03f5-b03cea70.html  ihe-delft-edition-c51b289c-3280-11f1-a0a9-0050561f03f5-3e5a3481.html  (+20 more)
reports/: 2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.ai-evaluation-template.csv  2026-06-19.ai-run-comparison.md  2026-06-19.ai.json  2026-06-19.md  2026-06-19.provider-comparison.json  2026-06-19.semantic.json  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.ai.json  2026-06-25.md  2026-06-25.semantic.json  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-23.md  2026-07-24.md  lmstudio.ai.json  ollama.ai.json
scripts/: register_task.ps1  scan_and_publish.ps1
src/research_school_radar/: __init__.py  adapters.py  ai_cache.py  ai_compare_providers.py  ai_compare_runs.py  ai_evaluate.py  ai_followup.py  ai_healthcheck.py  ai_home.py  ai_output_validation.py  ai_page_filter.py  ai_pipeline.py  ai_review.py  api_sources.py  atomic_io.py  audit_report.py  candidate_io.py  cli.py  collect.py  collector_ellis.py  collector_ihe.py  collector_sib.py  collector_sicss.py  date_extraction.py  discovery_filter.py  evidence_snippets.py  extract.py  fee_extraction.py  filter.py  http_cache.py  llm_client.py  models.py  (+38 more)
tests/: test_ai_cache.py  test_ai_compare_providers.py  test_ai_compare_runs.py  test_ai_evaluate.py  test_ai_failure_modes.py  test_ai_followup.py  test_ai_healthcheck.py  test_ai_home.py  test_ai_output_validation.py  test_ai_outputs.py  test_ai_page_filter.py  test_ai_review_output.py  test_api_source_health.py  test_atomic_io.py  test_audit_report.py  test_cli_llm_flags.py  test_cli_semantic_flags.py  test_cli_status_refresh.py  test_collect.py  test_collector_sib.py  test_collector_sicss.py  test_deepseek_client.py  test_discovery_filter.py  test_evidence_snippets.py  test_extract.py  test_filters_and_report.py  test_llm_parse.py  test_llm_provider_config.py  test_llm_validate.py  test_lmstudio_client.py  test_localization_audit.py  test_ollama_client.py  test_rank.py  test_report.py  test_review.py  test_scan_and_publish_script.py  test_scan_health.py  test_search.py  test_search_healthcheck.py  test_semantic.py  (+5 more)
(+32 files in other folders)
