[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-school-radar"
version = "0.1.0"
description = "A lightweight radar for research seasonal schools and training opportunities."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Research Seasonal School Radar contributors" }]
keywords = ["summer-school", "training-school", "research-training", "hydrology", "climate", "radar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://lione12138.github.io/research-school-radar/"
Repository = "https://github.com/lione12138/research-school-radar"
Issues = "https://github.com/lione12138/research-school-radar/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
]

[project.scripts]
school-radar = "research_school_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
