[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summer-school-radar"
version = "0.1.0"
description = "A radar for funded research summer schools, winter schools, and training schools."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Summer School Radar contributors" }]
keywords = ["summer-school", "training-school", "research-training", "hydrology", "climate", "radar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://lione12138.github.io/summer-school-radar/"
Repository = "https://github.com/lione12138/summer-school-radar"
Issues = "https://github.com/lione12138/summer-school-radar/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
]
semantic = [
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]
llm = [
  "openai>=1.0",
  "python-dotenv>=1.0",
]
# Headless-browser rendering for JavaScript-heavy sources (sources with
# `render: true`). After installing, run: playwright install chromium
render = [
  "playwright>=1.40",
]

[project.scripts]
school-radar = "research_school_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
