[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summer-school-radar"
version = "0.1.0"
description = "Summa scans trusted sources for funded research-training opportunities across disciplines."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Summa contributors" }]
keywords = ["summer-school", "training-school", "research-training", "multidisciplinary", "opportunities", "summa"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://lione12138.github.io/summer-school-radar/"
Repository = "https://github.com/lione12138/summer-school-radar"
Issues = "https://github.com/lione12138/summer-school-radar/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "ruff>=0.12",
]
semantic = [
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]
llm = [
  "python-dotenv>=1.0",
]
# Headless-browser rendering for JavaScript-heavy sources (sources with
# `render: true`). After installing, run: playwright install chromium
render = [
  "playwright>=1.40",
]

[project.scripts]
school-radar = "research_school_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_school_radar = [
  "web/templates/*.html",
  "web/static/css/*.css",
  "web/static/js/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
